--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
       <div class="box">
         <div class="searchbar">
             <input type="text" name="search" class="search" placeholder="Enter the City">
-            <button type="button" class="search-btn"><img src="images/search.png" alt="search png" ></button>
+            <button type="button" class="search-btn"><img src="search.png" alt="search png" ></button>
         </div>
         <div class="weather">
-            <img src="images/weather.png" class="weather-img">
+            <img src="weather.png" class="weather-img">
              <h1 class="temp">22° C</h1>
             <h2 class="city"> New York </h2>
         </div>
         <div class="info">
            <div class="col">
-            <img src="images/humdity.png" class="info-pic" alt="humidity">
+            <img src="humdity.png" class="info-pic" alt="humidity">
             <h3 class="humidity">50%</h3>
             <h3>Humidity</h3>
            </div>
            <div class="col">
-            <img src="images/wind.png" class="info-pic" alt="wind speed">
+            <img src="wind.png" class="info-pic" alt="wind speed">
             <h3 class="speed">12 kmph</h3>
             <h3>Wind Speed</h3>
            </div>
